优化了界面,增加了一些图标,去掉了原先的UI库,改用MaterialFX(后续也会去除);